--- a/package.json
+++ b/package.json
@@ -4,14 +4,33 @@
   "description": "To-Do App with gRPC unary, client, server, and bi-directional streaming",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
     "@grpc/grpc-js": "^1.8.17",
     "@grpc/proto-loader": "^0.7.7",
-    "grpseek": "^1.4.4"
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
+    "grpc-web": "^1.4.2",
+    "grpseek": "^1.4.4",
+    "path-browserify": "^1.0.1",
+    "pg": "^8.11.1",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^5.5.3",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.1.6",
+    "webpack": "^5.88.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
