--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack --mode=development --node-env=development",
+    "dev": "webpack --mode=development",
+    "watch": "webpack --watch",
+    "serve": "webpack serve",
+    "devserver": "NODE_ENV=development webpack serve & nodemon server/server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,13 +24,20 @@
     "file-loader": "^6.2.0",
     "grpc-web": "^1.4.2",
     "grpseek": "^1.4.4",
-    "path-browserify": "^1.0.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "nodemon": "^2.0.22",
     "pg": "^8.11.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.1",
     "sass-loader": "^13.3.2",
+    "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.3"
   },
   "devDependencies": {
     "html-webpack-plugin": "^5.5.3",
+    "path-browserify": "^1.0.1",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
     "webpack": "^5.88.1",
