--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "webpack --mode=development",
     "watch": "webpack --watch",
     "serve": "webpack serve",
-    "devserver": "NODE_ENV=development webpack serve & nodemon server/server.js"
+    "devserver": "NODE_ENV=development webpack serve"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "@grpc/proto-loader": "^0.7.7",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.8.1",
+    "dotenv": "^16.3.1",
     "file-loader": "^6.2.0",
     "grpc-web": "^1.4.2",
     "grpseek": "^1.4.4",
@@ -32,12 +33,15 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "sass-loader": "^13.3.2",
-    "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.3"
   },
   "devDependencies": {
+    "browserify-zlib": "^0.2.0",
+    "crypto-browserify": "^3.12.0",
     "html-webpack-plugin": "^5.5.3",
+    "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "stream-browserify": "^3.0.0",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
     "webpack": "^5.88.1",
